# cocos2d-x

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  CPPLINT.cfg
cmake/Modules/: CocosConfigDepend.cmake
cocos/ui/: UIWebViewImpl-ios.mm
proj.android/: build.gradle  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
proj.android/app/jni/hellocpp/: main.cpp
proj.android/app/res/values/: ic_launcher_background.xml  strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java  IAPPlugin.java
proj.ios_mac/: Podfile
proj.ios_mac/Sokoban.xcodeproj/: project.pbxproj
proj.ios_mac/Sokoban.xcodeproj/xcshareddata/xcschemes/: Sokoban-mobile.xcscheme
proj.ios_mac/Sokoban.xcworkspace/: contents.xcworkspacedata
proj.ios_mac/ios/: AppController.mm  GoogleService-Info.plist  IAPPlugin.h  IAPPlugin.mm  Info.plist  LaunchScreen.storyboard  RootViewController.h  RootViewController.mm  storekit.storekit
proj.ios_mac/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
proj.ios_mac/mac/: Info.plist  main.cpp
res/: levelData.json
res/images/: GameFinishScene.plist  GameScene.plist  MainMenu.plist  Settings.plist
src/: AppDelegate.cpp  AppDelegate.h  PlatformIncludes.h  Platform_Android.cpp  Platform_iOS.mm
src/data/: Config.cpp  Config.h  Events.cpp  Events.h  Keys.cpp  Keys.h
src/modules/: CommonLayout.cpp  CommonLayout.h  EventListenerManager.cpp  EventListenerManager.h  EventUtils.cpp  EventUtils.h  GameManager.cpp  GameManager.h  LevelLoader.cpp  LevelLoader.h  SoundUtil.cpp  SoundUtil.h  UiUtil.cpp  UiUtil.h  WidgetCBMacros.h
src/scenes/: GameFinishScene.cpp  GameFinishScene.h  GameScene.cpp  GameScene.h  LevelSelect.cpp  LevelSelect.h  MainMenu.cpp  MainMenu.h  MessagePopup.cpp  MessagePopup.h  OutOfMovesPopup.cpp  OutOfMovesPopup.h  Settings.cpp  Settings.h  SplashScene.cpp  SplashScene.h  WatchVideoPopup.cpp  WatchVideoPopup.h
src/views/: Entity.cpp  Entity.h  Grid.cpp  Grid.h  Tile.cpp  Tile.h
tools/: pre-commit
